[package]
name = "routing-actor"
version = "0.1.0"
authors = ["kingoflolz <wangben3@gmail.com>"]

[dependencies]
actix = "0.3.3"
actix_derive = "0.0.2"
tokio-core = "0.1"
futures = "0.1"
petgraph = {version = "0.4.10", features = ["serde-1"]}
rand = "0.3.*"
nalgebra = {version = "0.13.1", features = ["serde-serialize"]}
spade = "1.2.0"

[profile.dev]

[profile.release]
debug = true